# singularity

./: .gitignore
v1/: README.md  Singularity_V3_Training.ipynb  TRAINING.md  analyze_assets.py  analyze_data.py  analyze_portfolio.py  bottom_fisher_alert.py  check_balance.py  check_live_pred.py  data_bridge.py  debug_trader.py  debug_trader_v2.py  drift_monitor.py  export_onnx.py  force_optimize_on_loss.py  force_trade.py  get_market_snapshot.py  go.mod  go.sum  macro_sentiment.json  ollama_integration_plan.md  requirements.txt  research_singularity_v3_plan.md  research_v3_multihead_filter.md  self_optimize.py  sentiment_engine.py  sentinel_healer.py  sentinel_report.md  sentinel_researcher.py  singularity_challenge_v3.py  singularity_multi_asset.py  singularity_v3.onnx  singularity_v3.onnx.data  singularity_v3_epoch_10.pth  singularity_v3_epoch_20.pth  singularity_v3_epoch_30.pth  singularity_v3_latest.pth  start.sh  stress_test_v3.py  train_transformer.py  (+4 more)
v1/configs/: default.json
v1/internal/adapter/: binance.go  websocket_base.go
v1/internal/core/: backtest.go  strategy.go  types.go
v1/internal/features/: engine.go  entropy.go  model.go  recorder.go  strategy_engine.go
v1/internal/telemetry/: discord.go  hub.go
v1/upload_parts/: dataset.csv.part_am
v1/web/: dashboard_v3.html  index.html
v2/: Cargo.toml
v2/src/: main.rs
