[package]
name = "singularity_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
url = "2.5"
futures-util = "0.3"
csv = "1.3"
log = "0.4"
env_logger = "0.11"
